Cambios realizados 02/10: Agregado el tema del primer acercamiento a lectura y escritura en DB.

--- a/ProyectoBanco/nbproject/project.properties
+++ b/ProyectoBanco/nbproject/project.properties
@@ -65,7 +65,8 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${libs.eclipselink.classpath}:\
     ${libs.absolutelayout.classpath}:\
-    ${libs.beans-binding.classpath}
+    ${libs.beans-binding.classpath}:\
+    ${libs.MySQLDriver.classpath}
 annotation.processing.enabled.in.editor=false
 build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.version=false
